Fix caption and  th align

--- a/UDCT/RRAPP/css/styles.css
+++ b/UDCT/RRAPP/css/styles.css
@@ -401,7 +401,7 @@ nav h1 a {
 
 .revcomment {}
 
-caption,th{text-align-last: left;}
+caption,th{text-align: left;}
 
 @media all and (min-width: 1440px) {
   #restaurants-list li {
